es3_hw_assmnt_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Traffic_Light.build.log
10:56:23 **** Incremental Build of configuration Debug for project Traffic_Light ****
make all 
Building file: ../src/main.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../Traffic_Light_bsp/microblaze_0/include -mlittle-endian -mcpu=v9.5 -mxl-soft-mul -Wl,--no-relax -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:183:48: error: invalid suffix "ko" on integer constant
                XGpio_DiscreteWrite(&LED_OUT,1, 1ko);
                                                ^
make: *** [src/main.o] Error 1

10:56:24 Build Finished (took 59ms)

